EXTRA_DIST=\
	Draft.jpg \
	Novell.dic \
	Ubuntu.dic \
	banner_nld.bmp \
	mono-ooo.pc.in \
	nologoinstall_nld.bmp \
	ooobanner_nld.bmp \
	ooobitmap_nld.bmp \
	ooonologointro.bmp \
	openintro_nld.bmp \
	openabout_nld.bmp \
	openintro_ark.bmp \
	openabout_ark.png \
	openintro_fw.bmp \
	openabout_fw.bmp \
	openintro_fw64.bmp \
	openabout_fw64.bmp \
	openintro_gentoo.bmp \
	openintro_translateorgza.bmp \
	openabout_translateorgza.png \
        openintro_pld.bmp \
        openabout_pld.bmp \
	glib-1.2.10-ooo.patch \
	libIDL-0.6.8-ooo.patch \
	go-oo-team.png \
	evolocal.odb
