SUBDIRS=helpcontent2 icons layout sdf

EXTRA_DIST=\
	${wildcard setup_native_packinfo*.tar.bz2} \
	Draft.jpg \
	Novell.dic \
	Ubuntu.dic \
	banner_nld.bmp \
	cli_uno_bridge.dll.config.in \
	main_transform.xsl \
	mono-ooo.pc.in \
	nologoinstall_nld.bmp \
	ooobanner_nld.bmp \
	ooobitmap_nld.bmp \
	openintro_nld.bmp \
	openabout_nld.bmp \
	openintro_ark.bmp \
	openabout_ark.png \
	openintro_fw.bmp \
	openabout_fw.bmp \
	openintro_gentoo.bmp \
	openintro_translateorgza.bmp \
	openabout_translateorgza.png \
	openintro_pld.bmp \
	openabout_pld.bmp \
	sg3.sdg sg3.sdv sg3.thm \
	tango_mainapp_16.png \
	glib-1.2.10-ooo.patch \
	libIDL-0.6.8-ooo.patch \
	go-oo-team.png \
	evolocal.odb
