SUBDIRS=helpcontent2 icons layout sdf

EXTRA_DIST=\
	${wildcard *.dic} \
	Draft.jpg \
	banner_go-oo.bmp \
	banner_nld.bmp \
	cli_uno_bridge.dll.config.in \
	mono-ooo.pc.in \
	nologoinstall_go-oo.bmp \
	nologoinstall_nld.bmp \
	openintro_go-oo.bmp \
	openabout_go-oo.bmp \
	ooosetup_nld.ico \
	ooobanner_nld.bmp \
	ooobitmap_nld.bmp \
	openintro_nld.bmp \
	openabout_nld.bmp \
	openintro_ark.bmp \
	openabout_ark.png \
	openintro_fw.bmp \
	openabout_fw.bmp \
	openintro_gentoo.bmp \
	openintro_translateorgza.bmp \
	openabout_translateorgza.png \
	openintro_pld.bmp \
	openabout_pld.bmp \
	sg3.sdg sg3.sdv sg3.thm \
	tango_mainapp_16.png \
	glib-1.2.10-ooo.patch \
	libIDL-0.6.8-ooo.patch \
	go-oo-team.png \
	evolocal.odb
