SUBDIRS = \
	numeric \
	tool

EXTRA_DIST = \
	basedlg.hxx \
	baselistener.hxx \
	dialog.hxx \
	listener.hxx \
	lpbuilder.hxx \
	msgdlg.hxx \
	nlpbuilder.hxx \
	optiondlg.hxx \
	option.hxx \
	resmgr.hxx \
	scsolver.hrc \
	solvemodel.hxx \
	solver.hxx \
	type.hxx \
	unoglobal.hxx \
	unohelper.hxx \
	xcalc.hxx
