EXTRA_DIST = \
	cellfuncobj.cxx \
	diff.cxx \
	diff_test.cxx \
	exception.cxx \
	funcobj.cxx \
	lpbase.cxx \
	lpmodel.cxx \
	lpsimplex.cxx \
	lpsolve.cxx \
	lpuno.cxx \
	makefile.mk \
	matrix.cxx \
	matrix_test.cxx \
	nlpbase.cxx \
	nlpmodel.cxx \
	nlpqnewton.cxx \
	polyeqnsolver.cxx \
	polyeqnsolver_test.cxx \
	quadfitlinesearch.cxx \
	quadfitlinesearch_test.cxx
